infra/kubernetes/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collector-ingress
  namespace: collector-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http: 
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
